+ add 'Warn if missing potions' feature