@@ -197,3 +197,58 @@ export const drawStringWithShadow = (string, x, y, z, scale, color) => {
 
     GlStateManager.func_179126_j() //enableDepth()
 }
+
+// Title code from DocilElm
+
+const currentTitle = {
+    title: null,
+    subtitle: null,
+    time: null
+}
+let titleStarted = null
+
+const _drawTitle = (title, subtitle) => {
+    const [ x, y ] = [
+        Renderer.screen.getWidth() / 2,
+        Renderer.screen.getHeight() / 2
+    ]
+
+    Renderer.translate(x, y)
+    Renderer.scale(4, 4)
+    Renderer.drawStringWithShadow(title, -(Renderer.getStringWidth(title) / 2), -10)
+
+    Renderer.translate(x, y)
+    Renderer.scale(2, 2)
+    Renderer.drawStringWithShadow(subtitle, -(Renderer.getStringWidth(subtitle) / 2), 5)
+}
+
+/**
+ * Renders a title
+ * @param {String} title title
+ * @param {String} subtitle subtitle
+ * @param {Number} ms time in ms
+ */
+export const showTitle = (title, subtitle, ms) => {
+    currentTitle.title = title
+    currentTitle.subtitle = subtitle
+    currentTitle.time = ms
+}
+
+register("renderOverlay", () => {
+    if (!currentTitle.time) return
+    if (!titleStarted) titleStarted = Date.now()
+
+    const remainingTime = currentTitle.time - (Date.now() - titleStarted)
+
+    if (remainingTime <= 0) {
+        currentTitle.title = null
+        currentTitle.subtitle = null
+        currentTitle.time = null
+
+        titleStarted = null
+
+        return
+    }
+
+    _drawTitle(currentTitle.title, currentTitle.subtitle)
+})
