@@ -1,1 +1,2 @@
 + add 'Warn if missing potions' feature
++ add 'Prevent warping out' feature while brewing
